--- a/BUILD.gn
+++ b/BUILD.gn
@@ -359,11 +359,8 @@ all_devtools_files = [
   "front_end/sdk_test_runner/module.json",
   "front_end/sdk_test_runner/PageMockTestRunner.js",
   "front_end/search/module.json",
-  "front_end/search/SearchConfig.js",
   "front_end/search/searchResultsPane.css",
-  "front_end/search/SearchResultsPane.js",
   "front_end/search/searchView.css",
-  "front_end/search/SearchView.js",
   "front_end/security/lockIcon.css",
   "front_end/security/mainView.css",
   "front_end/security/module.json",
@@ -581,6 +578,10 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/search/search.js",
+  "front_end/search/SearchView.js",
+  "front_end/search/SearchResultsPane.js",
+  "front_end/search/SearchConfig.js",
   "front_end/snippets/snippets.js",
   "front_end/snippets/SnippetsQuickOpen.js",
   "front_end/snippets/ScriptSnippetFileSystem.js",
@@ -1241,6 +1242,10 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/search/search.js",
+  "$resources_out_dir/search/SearchView.js",
+  "$resources_out_dir/search/SearchResultsPane.js",
+  "$resources_out_dir/search/SearchConfig.js",
   "$resources_out_dir/snippets/snippets.js",
   "$resources_out_dir/snippets/SnippetsQuickOpen.js",
   "$resources_out_dir/snippets/ScriptSnippetFileSystem.js",
