Replay input event too devtools timeline
Change-Id: I6d55aa3495f9ad767a9cd9d3a73df79b22f3fb57

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -662,6 +662,7 @@ if (external_devtools_frontend) {
     "front_end/quick_open/FilteredListWidget.js",
     "front_end/quick_open/CommandMenu.js",
     "front_end/timeline_model/timeline_model.js",
+    "front_end/timeline_model/InputModel.js",
     "front_end/timeline_model/TracingLayerTree.js",
     "front_end/timeline_model/TimelineProfileTree.js",
     "front_end/timeline_model/TimelineModel.js",
@@ -1286,6 +1287,7 @@ if (external_devtools_frontend) {
     "$resources_out_dir/quick_open/FilteredListWidget.js",
     "$resources_out_dir/quick_open/CommandMenu.js",
     "$resources_out_dir/timeline_model/timeline_model.js",
+    "$resources_out_dir/timeline_model/InputModel.js",
     "$resources_out_dir/timeline_model/TracingLayerTree.js",
     "$resources_out_dir/timeline_model/TimelineProfileTree.js",
     "$resources_out_dir/timeline_model/TimelineModel.js",
