Show blocked cookies in cookies panel
This cl adds a temporary list collecting blocked cookies
from network requests to also surface them in the application
panel to increase the chance of developers being able to
see when their cookies have been blocked.

Screenshot: https://imgur.com/a/wyPDynT

Bug: chromium:1030258
Change-Id: I0e981d03e478f1fbea5e2eb30f632cf4f121688a

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -80,6 +80,7 @@ all_devtools_files = [
   "front_end/console_test_runner/ConsoleTestRunner.js",
   "front_end/console_test_runner/module.json",
   "front_end/cookie_table/module.json",
+  "front_end/cookie_table/cookiesTable.css",
   "front_end/coverage/coverageListView.css",
   "front_end/coverage/coverageView.css",
   "front_end/coverage/module.json",
@@ -697,6 +698,7 @@ all_devtools_modules = [
   "front_end/object_ui/JavaScriptAutocomplete.js",
   "front_end/object_ui/CustomPreviewComponent.js",
   "front_end/cookie_table/cookie_table.js",
+  "front_end/cookie_table/cookiesTable.css",
   "front_end/cookie_table/CookiesTable.js",
   "front_end/cm_modes/cm_modes.js",
   "front_end/cm_modes/DefaultCodeMirrorMimeMode.js",
@@ -911,6 +913,7 @@ all_devtools_modules = [
   "front_end/sdk/Resource.js",
   "front_end/sdk/RemoteObject.js",
   "front_end/sdk/ProfileTreeModel.js",
+  "front_end/sdk/IssuesModel.js",
   "front_end/sdk/PerformanceMetricsModel.js",
   "front_end/sdk/PaintProfiler.js",
   "front_end/sdk/OverlayModel.js",
@@ -1556,6 +1559,7 @@ copied_devtools_modules = [
   "$resources_out_dir/sdk/Resource.js",
   "$resources_out_dir/sdk/RemoteObject.js",
   "$resources_out_dir/sdk/ProfileTreeModel.js",
+  "$resources_out_dir/sdk/IssuesModel.js",
   "$resources_out_dir/sdk/PerformanceMetricsModel.js",
   "$resources_out_dir/sdk/PaintProfiler.js",
   "$resources_out_dir/sdk/OverlayModel.js",
