--- a/BUILD.gn
+++ b/BUILD.gn
@@ -250,9 +250,7 @@ all_devtools_files = [
   "front_end/network_test_runner/module.json",
   "front_end/network_test_runner/NetworkTestRunner.js",
   "front_end/node_debugger/module.json",
-  "front_end/node_main/NodeConnectionsPanel.js",
   "front_end/node_main/nodeConnectionsPanel.css",
-  "front_end/node_main/NodeMain.js",
   "front_end/node_main/module.json",
   "front_end/object_ui/customPreviewComponent.css",
   "front_end/object_ui/module.json",
@@ -572,6 +570,9 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/node_main/node_main.js",
+  "front_end/node_main/NodeMain.js",
+  "front_end/node_main/NodeConnectionsPanel.js",
   "front_end/inspector_main/inspector_main.js",
   "front_end/inspector_main/RenderingOptions.js",
   "front_end/inspector_main/InspectorMain.js",
@@ -1248,6 +1249,9 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/node_main/node_main.js",
+  "$resources_out_dir/node_main/NodeMain.js",
+  "$resources_out_dir/node_main/NodeConnectionsPanel.js",
   "$resources_out_dir/inspector_main/inspector_main.js",
   "$resources_out_dir/inspector_main/RenderingOptions.js",
   "$resources_out_dir/inspector_main/InspectorMain.js",
