Show blocked cookies in cookies panel
This cl adds a temporary list collecting blocked cookies
from network requests to also surface them in the application
panel to increase the chance of developers being able to
see when their cookies have been blocked.

Screenshot: https://imgur.com/a/wyPDynT

CL to disable failing test: crrev.com/c/1949470

Bug: chromium:1030258
Change-Id: I8e813337f033893ce1f0e1499559a83585989a76

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -80,6 +80,7 @@ all_devtools_files = [
   "front_end/console_test_runner/ConsoleTestRunner.js",
   "front_end/console_test_runner/module.json",
   "front_end/cookie_table/module.json",
+  "front_end/cookie_table/cookiesTable.css",
   "front_end/coverage/coverageListView.css",
   "front_end/coverage/coverageView.css",
   "front_end/coverage/module.json",
@@ -169,15 +170,13 @@ all_devtools_files = [
   "front_end/inline_editor/swatchPopover.css",
   "front_end/inspector.js",
   "front_end/inspector.json",
-  "front_end/inspector_main/InspectorMain.js",
   "front_end/inspector_main/module.json",
   "front_end/inspector_main/nodeIcon.css",
   "front_end/inspector_main/renderingOptions.css",
-  "front_end/inspector_main/RenderingOptions.js",
   "front_end/integration_test_runner.js",
   "front_end/integration_test_runner.json",
   "front_end/javascript_metadata/module.json",
-  "front_end/js_main/JsMain.js",
+
   "front_end/js_main/module.json",
   "front_end/js_profiler/module.json",
   "front_end/layer_viewer/layerDetailsView.css",
@@ -359,11 +358,8 @@ all_devtools_files = [
   "front_end/sdk_test_runner/module.json",
   "front_end/sdk_test_runner/PageMockTestRunner.js",
   "front_end/search/module.json",
-  "front_end/search/SearchConfig.js",
   "front_end/search/searchResultsPane.css",
-  "front_end/search/SearchResultsPane.js",
   "front_end/search/searchView.css",
-  "front_end/search/SearchView.js",
   "front_end/security/lockIcon.css",
   "front_end/security/mainView.css",
   "front_end/security/module.json",
@@ -581,6 +577,15 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/inspector_main/inspector_main.js",
+  "front_end/inspector_main/RenderingOptions.js",
+  "front_end/inspector_main/InspectorMain.js",
+  "front_end/js_main/js_main.js",
+  "front_end/js_main/JsMain.js",
+  "front_end/search/search.js",
+  "front_end/search/SearchView.js",
+  "front_end/search/SearchResultsPane.js",
+  "front_end/search/SearchConfig.js",
   "front_end/snippets/snippets.js",
   "front_end/snippets/SnippetsQuickOpen.js",
   "front_end/snippets/ScriptSnippetFileSystem.js",
@@ -697,6 +702,7 @@ all_devtools_modules = [
   "front_end/object_ui/JavaScriptAutocomplete.js",
   "front_end/object_ui/CustomPreviewComponent.js",
   "front_end/cookie_table/cookie_table.js",
+  "front_end/cookie_table/cookiesTable.css",
   "front_end/cookie_table/CookiesTable.js",
   "front_end/cm_modes/cm_modes.js",
   "front_end/cm_modes/DefaultCodeMirrorMimeMode.js",
@@ -1242,6 +1248,15 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/inspector_main/inspector_main.js",
+  "$resources_out_dir/inspector_main/RenderingOptions.js",
+  "$resources_out_dir/inspector_main/InspectorMain.js",
+  "$resources_out_dir/js_main/js_main.js",
+  "$resources_out_dir/js_main/JsMain.js",
+  "$resources_out_dir/search/search.js",
+  "$resources_out_dir/search/SearchView.js",
+  "$resources_out_dir/search/SearchResultsPane.js",
+  "$resources_out_dir/search/SearchConfig.js",
   "$resources_out_dir/snippets/snippets.js",
   "$resources_out_dir/snippets/SnippetsQuickOpen.js",
   "$resources_out_dir/snippets/ScriptSnippetFileSystem.js",
@@ -2107,7 +2122,6 @@ group("devtools_type_check") {
     "front_end/",
     "scripts/build/",
     "scripts/closure/",
-    "scripts/compile_frontend.py",
     "scripts/devtools_paths.py",
     "scripts/jsdoc_validator/",
     "scripts/utils.py",
@@ -2130,7 +2144,6 @@ if (is_linux && !is_chromeos) {
       "front_end/",
       "node_modules/",
       "scripts/devtools_paths.py",
-      "scripts/lint_javascript.py",
       "scripts/test/",
       "//testing/scripts/common.py",
       "//testing/scripts/run_devtools_check.py",
@@ -2147,7 +2160,6 @@ if (is_linux && !is_chromeos) {
       "karma.conf.js",
       "node_modules/",
       "scripts/devtools_paths.py",
-      "scripts/run_tests.py",
       "scripts/test/",
       "tests/unittests",
       "third_party/chrome/",
@@ -2168,7 +2180,6 @@ group("devtools_closure_compile") {
     "front_end/",
     "scripts/build/",
     "scripts/closure/",
-    "scripts/compile_frontend.py",
     "scripts/devtools_paths.py",
     "scripts/jsdoc_validator/",
     "scripts/utils.py",
@@ -2191,7 +2202,6 @@ if (is_linux && !is_chromeos) {
       "front_end/",
       "node_modules/",
       "scripts/devtools_paths.py",
-      "scripts/lint_javascript.py",
       "scripts/test/",
       "//testing/scripts/common.py",
       "//testing/scripts/run_devtools_check.py",
@@ -2208,7 +2218,6 @@ if (is_linux && !is_chromeos) {
       "karma.conf.js",
       "node_modules/",
       "scripts/devtools_paths.py",
-      "scripts/run_tests.py",
       "scripts/test/",
       "tests/unittests",
       "third_party/chrome/",
