Add Fabric.js as a front-end module
This CL introduces Fabric.js to the DevTools front-end. As a part of
the WebAudio Devtools project, the graph visualizer needs Fabric.js
for the fast 2D rendering.

The complete working prototype:
https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/1893911

Bug: 1022873
Change-Id: I57d6fc2b8d06c3adfac52e100f9307829d6a1c65

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -463,6 +463,8 @@ all_devtools_files = [
   "front_end/timeline/TimelineUIUtils.js",
   "front_end/timeline/UIDevtoolsController.js",
   "front_end/timeline/UIDevtoolsUtils.js",
+  "front_end/third_party/fabricjs/fabric.js",
+  "front_end/third_party/fabricjs/module.json",
   "front_end/toolbox_bootstrap/module.json",
   "front_end/toolbox_bootstrap/Toolbox.js",
   "front_end/toolbox.js",
@@ -1787,6 +1789,7 @@ generated_remote_modules = [
   "$resources_out_dir/audits_worker/audits_worker_module.js",
   "$resources_out_dir/dagre_layout/dagre_layout_module.js",
   "$resources_out_dir/emulated_devices/emulated_devices_module.js",
+  "$resources_out_dir/fabricjs/fabricjs_module.js",
 ]
 
 generated_test_modules = [
