--- a/front_end/devtools_app.json
+++ b/front_end/devtools_app.json
@@ -14,6 +14,7 @@
     { "name": "devices" },
     { "name": "elements" },
     { "name": "emulated_devices" , "type": "remote" },
+    { "name": "fabricjs", "type": "remote" },
     { "name": "har_importer" },
     { "name": "help" },
     { "name": "layers" },
