[WIP] WebAudio Graph Visualizer
This is a working prototype of WebAudio graph visualizer. This is for
the reference purpose only; not for review or merge.

Design doc: go/web-audio-geiger-viz (googler-only)

Tricium: disable
Bug: 974343
Change-Id: I06cf678cf06e27f4dd1a8ca8aa022dbf4ae9076f

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -434,6 +434,8 @@ all_devtools_files = [
   "front_end/text_editor/cmdevtools.css",
   "front_end/text_editor/module.json",
   "front_end/text_utils/module.json",
+  "front_end/third_party/fabricjs/fabric.js",
+  "front_end/third_party/fabricjs/module.json",
   "front_end/timeline_model/module.json",
   "front_end/timeline/CountersGraph.js",
   "front_end/timeline/EventsTimelineTreeView.js",
@@ -510,12 +512,17 @@ all_devtools_files = [
   "front_end/web_audio/audioContextSelector.css",
   "front_end/web_audio/module.json",
   "front_end/web_audio/webAudio.css",
+  "front_end/web_audio/graph_visualizer/graphVisualizer.css",
   "front_end/worker_main/WorkerMain.js",
   "front_end/worker_main/module.json",
   "front_end/worker_service/module.json",
   "front_end/worker_service/ServiceDispatcher.js",
   "front_end/workspace/module.json",
   "front_end/workspace_diff/module.json",
+  "front_end/web_audio_worker.js",
+  "front_end/web_audio_worker.json",
+  "front_end/web_audio_worker/WebAudioWorker.js",
+  "front_end/web_audio_worker/module.json",
 ]
 
 lighthouse_locale_files = [
@@ -604,6 +611,10 @@ all_devtools_modules = [
   "front_end/web_audio/graph_visualizer/NodeView.js",
   "front_end/web_audio/graph_visualizer/EdgeView.js",
   "front_end/web_audio/graph_visualizer/GraphView.js",
+  "front_end/web_audio/graph_visualizer/EdgeRendererUtility.js",
+  "front_end/web_audio/graph_visualizer/GraphRenderer.js",
+  "front_end/web_audio/graph_visualizer/GraphRendererUtility.js",
+  "front_end/web_audio/graph_visualizer/NodeRendererUtility.js",
   "front_end/web_audio/WebAudioView.js",
   "front_end/web_audio/WebAudioModel.js",
   "front_end/web_audio/AudioContextSelector.js",
@@ -1217,6 +1228,7 @@ devtools_image_files = [
   "front_end/Images/searchNext.png",
   "front_end/Images/searchPrev.png",
   "front_end/Images/securityIcons.svg",
+  "front_end/Images/seeWholeGraph.svg",
   "front_end/Images/speech.png",
   "front_end/Images/smallIcons.svg",
   "front_end/Images/toolbarResizerVertical.png",
@@ -1276,10 +1288,13 @@ copied_devtools_modules = [
   "$resources_out_dir/web_audio/graph_visualizer/Types.js",
   "$resources_out_dir/web_audio/graph_visualizer/GraphStyle.js",
   "$resources_out_dir/web_audio/graph_visualizer/GraphManager.js",
-  "$resources_out_dir/web_audio/graph_visualizer/NodeRendererUtility.js",
   "$resources_out_dir/web_audio/graph_visualizer/NodeView.js",
   "$resources_out_dir/web_audio/graph_visualizer/EdgeView.js",
   "$resources_out_dir/web_audio/graph_visualizer/GraphView.js",
+  "$resources_out_dir/web_audio/graph_visualizer/EdgeRendererUtility.js",
+  "$resources_out_dir/web_audio/graph_visualizer/GraphRenderer.js",
+  "$resources_out_dir/web_audio/graph_visualizer/GraphRendererUtility.js",
+  "$resources_out_dir/web_audio/graph_visualizer/NodeRendererUtility.js",
   "$resources_out_dir/web_audio/WebAudioView.js",
   "$resources_out_dir/web_audio/WebAudioModel.js",
   "$resources_out_dir/web_audio/AudioContextSelector.js",
@@ -1728,6 +1743,7 @@ generated_applications = [
   "$resources_out_dir/shell.js",
   "$resources_out_dir/toolbox.html",
   "$resources_out_dir/toolbox.js",
+  "$resources_out_dir/web_audio_worker.js",
   "$resources_out_dir/worker_app.html",
   "$resources_out_dir/worker_app.js",
 ]
@@ -1780,13 +1796,16 @@ generated_non_autostart_non_remote_modules = [
   "$resources_out_dir/timeline/timeline_module.js",
   "$resources_out_dir/web_audio/web_audio_module.js",
   "$resources_out_dir/workspace_diff/workspace_diff_module.js",
+  "$resources_out_dir/dagre_layout/dagre_layout_module.js",
+  "$resources_out_dir/fabricjs/fabricjs_module.js",
 ]
 
 generated_remote_modules = [
   "$resources_out_dir/accessibility/accessibility_module.js",
   "$resources_out_dir/audits_worker/audits_worker_module.js",
-  "$resources_out_dir/dagre_layout/dagre_layout_module.js",
   "$resources_out_dir/emulated_devices/emulated_devices_module.js",
+  ##### "$resources_out_dir/dagre_layout/dagre_layout_module.js",
+  ##### "$resources_out_dir/fabricjs/fabricjs_module.js",
 ]
 
 generated_test_modules = [
@@ -1831,6 +1850,7 @@ devtools_applications = [
   "node_app",
   "shell",
   "toolbox",
+  "web_audio_worker",
   "worker_app",
 ]
 
