--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "url": "git+https://github.com/ChromeDevTools/devtools-frontend.git"
   },
   "scripts": {
+    "check": "npm run check-gn && npm run check-grdp && npm run check-json && npm run check-lint && npm run check-loc && npm run check-type",
     "check-gn": "node scripts/check_gn.js",
-    "check-json": "node scripts/json_validator/validate_module_json.js",
     "check-grdp": "node scripts/localization/check_localizable_resources.js",
+    "check-json": "node scripts/json_validator/validate_module_json.js",
+    "check-lint": "python scripts/test/run_lint_check.py",
+    "check-loc": "python scripts/test/run_localization_check.py",
+    "check-type": "python scripts/test/run_type_check.py",
     "chrome": "node scripts/hosted_mode/launch_chrome.js",
     "debug-test": "node scripts/npm_test.js --debug-devtools",
     "format-py": "yapf --exclude scripts/build/rjsmin.py -i --recursive scripts PRESUBMIT.py",
@@ -30,10 +34,6 @@
     "server": "node scripts/hosted_mode/server.js",
     "setup-dtrun": "cd scripts/devtools_run && npm link",
     "start": "node scripts/hosted_mode/start_chrome_and_server.js",
-    "test": "node scripts/npm_test.js",
-
-    "check-lint": "python scripts/test/run_lint_check.py",
-    "check-loc": "python scripts/test/run_localization_check.py",
-    "check-type": "python scripts/test/run_type_check.py"
+    "test": "node scripts/npm_test.js"
   }
 }
