Replay input event too devtools timeline
Change-Id: I6d55aa3495f9ad767a9cd9d3a73df79b22f3fb57

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -416,6 +416,7 @@ all_devtools_files = [
   "front_end/timeline/ExtensionTracingSession.js",
   "front_end/timeline/historyToolbarButton.css",
   "front_end/timeline/invalidationsTree.css",
+  "front_end/timeline/InputModel.js",
   "front_end/timeline/module.json",
   "front_end/timeline/PerformanceModel.js",
   "front_end/timeline/TimelineController.js",
