--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1897,20 +1897,22 @@ group("devtools_all_files") {
   ]
 }
 
-devtools_frontend_resources_deps = [
-  ":aria_properties",
-  ":build_release_devtools",
-  ":copy_embedder_scripts",
-  ":copy_emulated_devices_images",
-  ":copy_htaccess",
-  ":copy_inspector_images",
-  ":copy_lighthouse_locale_files",
-  ":copy_wasm_deps",
-  ":devtools_extension_api",
-  ":frontend_protocol_sources",
-  ":supported_css_properties",
-  ":copy_devtools_modules",
-]
+devtools_typescript_deps = [ "front_end/common:common" ]
+
+devtools_frontend_resources_deps = devtools_typescript_deps + [
+                                     ":aria_properties",
+                                     ":build_release_devtools",
+                                     ":copy_embedder_scripts",
+                                     ":copy_emulated_devices_images",
+                                     ":copy_htaccess",
+                                     ":copy_inspector_images",
+                                     ":copy_lighthouse_locale_files",
+                                     ":copy_wasm_deps",
+                                     ":devtools_extension_api",
+                                     ":frontend_protocol_sources",
+                                     ":supported_css_properties",
+                                     ":copy_devtools_modules",
+                                   ]
 
 if (debug_devtools) {
   devtools_frontend_resources_deps += [
