--- a/BUILD.gn
+++ b/BUILD.gn
@@ -282,6 +282,10 @@ if (external_devtools_frontend) {
     "front_end/media/module.json",
     "front_end/media/MediaModel.js",
     "front_end/media/mediaView.css",
+    "front_end/media/chevronTabbedPanel.css",
+    "front_end/media/ChevronTabbedPanel.js",
+    "front_end/media/playerPropertiesView.css",
+    "front_end/media/PlayerPropertiesView.js",
     "front_end/ndb_app.json",
     "front_end/network/binaryResourceView.css",
     "front_end/network/blockedURLsPane.css",
