Redesigned properties view
Move away from the default table view and give good meaningful names
to sections and properties.

Screenshots: https://files.tedm.io/dtss/prop2light.png
             https://files.tedm.io/dtss/prop2dark.png
             https://files.tedm.io/dtss/prop.mp4

Bug: 794255
Change-Id: I2f0990d42095d7c00eb26ec4868f747da99b1e84

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -192,6 +192,10 @@ all_devtools_files = [
   "front_end/media/module.json",
   "front_end/media/MediaModel.js",
   "front_end/media/mediaView.css",
+    "front_end/media/chevronTabbedPanel.css",
+    "front_end/media/ChevronTabbedPanel.js",
+    "front_end/media/playerPropertiesView.css",
+    "front_end/media/PlayerPropertiesView.js",
   "front_end/ndb_app.json",
   "front_end/network/binaryResourceView.css",
   "front_end/network/blockedURLsPane.css",
