Show TypeScript failing compilation with @interface
Building DevTools will result in the following errors:

../../front_end/common/EventTarget.js(6,20): error TS2503: Cannot find namespace 'Common'.
../../front_end/common/EventTarget.js(22,14): error TS7014: Function type, which lacks return-type annotation, implicitly has an 'any' return type.
../../front_end/common/EventTarget.js(22,24): error TS2503: Cannot find namespace 'Common'.
../../front_end/common/EventTarget.js(24,16): error TS2503: Cannot find namespace 'Common'.
../../front_end/common/EventTarget.js(31,15): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
../../front_end/common/EventTarget.js(38,14): error TS7014: Function type, which lacks return-type annotation, implicitly has an 'any' return type.
../../front_end/common/EventTarget.js(38,24): error TS2503: Cannot find namespace 'Common'.
../../front_end/common/EventTarget.js(46,15): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.

The errors "A function whose declared type is neither 'void' nor 'any'
must return a value." highlight the problem.

Change-Id: I52e5e10699ea92164ab1838c68db8dd2015bd3e2

--- a/front_end/common/BUILD.gn
+++ b/front_end/common/BUILD.gn
@@ -7,11 +7,18 @@ import("../../third_party/typescript/typescript.gni")
 group("common") {
   public_deps = [
     ":trie",
+    ":event_target",
   ]
 }
 
 ts_library("trie") {
   sources = [
     "Trie.js",
+  ]
+}
+
+ts_library("event_target") {
+  sources = [
+    "EventTarget.js",
   ]
 }
