Run layout tests with dynamic import
This removes the `fetch-and-eval` pattern and instead uses a dynamic
import to fetch the test. For `debug-test` the test function simply
wraps the same dynamic import and will write to the console.

Bug: 1006759
Change-Id: Ice696ab67a24673802026dee2a08748c698c4de0

--- a/.eslintignore
+++ b/.eslintignore
@@ -18,3 +18,6 @@ front_end/protocol_externs.js
 front_end/javascript_metadata/NativeFunctions.js
 front_end/sdk/wasm_source_map/pkg/wasm_source_map.js
 scripts/
+
+// This uses dynamic import which seems to break the eslint-parser
+front_end/test_runner/TestRunner.js
