[WIP] Moves UI to full ESM
Change-Id: If46ede37689601c3268b37aa674209b2d5fd609c

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -984,6 +984,7 @@ all_devtools_modules = [
   "front_end/ui/ViewManager.js",
   "front_end/ui/UIUtils.js",
   "front_end/ui/ui.js",
+  "front_end/ui/ui-legacy.js",
   "front_end/ui/Treeoutline.js",
   "front_end/ui/Tooltip.js",
   "front_end/ui/Toolbar.js",
@@ -1680,6 +1681,7 @@ copied_devtools_modules = [
   "$resources_out_dir/platform/utilities.js",
   "$resources_out_dir/platform/platform.js",
   "$resources_out_dir/ui/ui.js",
+  "$resources_out_dir/ui/ui-legacy.js",
   "$resources_out_dir/ui/ZoomManager.js",
   "$resources_out_dir/ui/XWidget.js",
   "$resources_out_dir/ui/XLink.js",
