Switch on build numbers to make gatekeeper work
Bug: 1033024
Change-Id: I1e923d16850f46cf8f2a4864e2a8985acd26b692

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -100,6 +100,8 @@ buckets {
         cipd_version: "refs/heads/master"
         properties: "mastername:client.devtools-frontend.integration"
       }
+
+      build_numbers: YES
     }
 
     # Console: Main
