--- a/BUILD.gn
+++ b/BUILD.gn
@@ -977,6 +977,7 @@ all_devtools_modules = [
   "front_end/Runtime.js",
   "front_end/platform/utilities.js",
   "front_end/platform/platform.js",
+  "front_end/ui/ui-legacy.js",
   "front_end/ui/ARIAUtils.js",
   "front_end/ui/ZoomManager.js",
   "front_end/ui/XWidget.js",
@@ -1683,6 +1684,7 @@ copied_devtools_modules = [
   "$resources_out_dir/platform/utilities.js",
   "$resources_out_dir/platform/platform.js",
   "$resources_out_dir/ui/ui.js",
+  "$resources_out_dir/ui/ui-legacy.js",
   "$resources_out_dir/ui/ZoomManager.js",
   "$resources_out_dir/ui/XWidget.js",
   "$resources_out_dir/ui/XLink.js",
