Fix failing presubmit checks
This change http://crrev.com/c/1969473 added presubmit checks which were failing on master due to files in BUILD.gn missing from all_devtools_modules and copied_devtools_modules.

A complete list of missing files: (taken from presubmit output run against master)

** Presubmit ERRORS **
DevTools BUILD.gn checker detected errors!
There's an issue with: D:\Chromium\src\third_party\devtools-frontend\src\BUILD.gn
Missing file in BUILD.gn for all_devtools_modules: "front_end\formatter_worker\acorn\acorn.js",
Missing file in BUILD.gn for all_devtools_modules: "front_end\formatter_worker\acorn\acorn_loose.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\formatter_worker.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\ESTreeWalker.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\FormatterWorker.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\acorn\acorn.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\acorn\acorn_loose.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\CSSFormatter.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\AcornTokenizer.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\JavaScriptFormatter.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\FormattedContentBuilder.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\CSSRuleParser.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\HTMLFormatter.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\formatter_worker\IdentityFormatter.js",
Missing file in

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -139,8 +139,6 @@ all_devtools_files = [
   "front_end/extensions_test_runner/module.json",
   "front_end/formatter/module.json",
   "front_end/formatter_worker.json",
-  "front_end/formatter_worker/acorn/acorn.js",
-  "front_end/formatter_worker/acorn/acorn_loose.js",
   "front_end/formatter_worker/module.json",
   "front_end/har_importer/module.json",
   "front_end/heap_profiler_test_runner/HeapProfilerTestRunner.js",
@@ -826,6 +824,8 @@ all_devtools_modules = [
   "front_end/text_utils/TextUtils.js",
   "front_end/text_utils/TextRange.js",
   "front_end/text_utils/Text.js",
+  "front_end/formatter_worker/acorn/acorn.js",
+  "front_end/formatter_worker/acorn/acorn_loose.js",
   "front_end/formatter_worker/formatter_worker.js",
   "front_end/formatter_worker/RelaxedJSONParser.js",
   "front_end/formatter_worker/JavaScriptOutline.js",
@@ -1784,6 +1784,20 @@ copied_devtools_modules = [
   "$resources_out_dir/common/Trie.js",
   "$resources_out_dir/common/UIString.js",
   "$resources_out_dir/common/Worker.js",
+  "$resources_out_dir/formatter_worker/acorn/acorn.js",
+  "$resources_out_dir/formatter_worker/acorn/acorn_loose.js",
+  "$resources_out_dir/formatter_worker/formatter_worker.js",
+  "$resources_out_dir/formatter_worker/RelaxedJSONParser.js",
+  "$resources_out_dir/formatter_worker/JavaScriptOutline.js",
+  "$resources_out_dir/formatter_worker/JavaScriptFormatter.js",
+  "$resources_out_dir/formatter_worker/IdentityFormatter.js",
+  "$resources_out_dir/formatter_worker/HTMLFormatter.js",
+  "$resources_out_dir/formatter_worker/FormatterWorker.js",
+  "$resources_out_dir/formatter_worker/FormattedContentBuilder.js",
+  "$resources_out_dir/formatter_worker/ESTreeWalker.js",
+  "$resources_out_dir/formatter_worker/CSSRuleParser.js",
+  "$resources_out_dir/formatter_worker/CSSFormatter.js",
+  "$resources_out_dir/formatter_worker/AcornTokenizer.js",
 ]
 
 generated_applications = [
