Remove redundant BUILD.gn entries and fix presubmit check
This CL removes redundant 'input.js' module entries in the BUILD.gn file
and fixes the presubmit script by including 'input.js' module files
in the copied_devtools_module list.

See crrev.com/c/1962300 for the original additions to BUILD.gn.
Looks like the 'input.js' module and associated files were accidentally
added twice to the all_devtools_modules list.

This CL fixes the following presubmit error:

** Presubmit ERRORS **
DevTools BUILD.gn checker detected errors!
There's an issue with: D:\chromium\src\third_party\devtools-frontend\src\BUILD.gn
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\input\input.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\input\InputModel.js",
Missing file in BUILD.gn for copied_devtools_modules: "$resources_out_dir\input\InputTimeline.js",

Change-Id: Ia8a5c6241447a09734d3fe61b8918c520b92fdaf

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -868,9 +868,6 @@ all_devtools_modules = [
   "front_end/extensions/ExtensionServer.js",
   "front_end/extensions/ExtensionTraceProvider.js",
   "front_end/extensions/ExtensionView.js",
-  "front_end/input/input.js",
-  "front_end/input/InputTimeline.js",
-  "front_end/input/InputModel.js",
   "front_end/browser_sdk/browser_sdk.js",
   "front_end/browser_sdk/LogManager.js",
   "front_end/persistence/persistence.js",
@@ -1498,6 +1495,9 @@ copied_devtools_modules = [
   "$resources_out_dir/console/ConsoleView.js",
   "$resources_out_dir/console/ConsoleViewMessage.js",
   "$resources_out_dir/console/ConsoleViewport.js",
+  "$resources_out_dir/input/input.js",
+  "$resources_out_dir/input/InputTimeline.js",
+  "$resources_out_dir/input/InputModel.js",
   "$resources_out_dir/animation/animation.js",
   "$resources_out_dir/animation/AnimationUI.js",
   "$resources_out_dir/animation/AnimationTimeline.js",
