--- a/BUILD.gn
+++ b/BUILD.gn
@@ -541,6 +541,18 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/perf_ui/perf_ui.js",
+  "front_end/perf_ui/TimelineOverviewPane.js",
+  "front_end/perf_ui/TimelineGrid.js",
+  "front_end/perf_ui/PieChart.js",
+  "front_end/perf_ui/OverviewGrid.js",
+  "front_end/perf_ui/NetworkPriorities.js",
+  "front_end/perf_ui/LiveHeapProfile.js",
+  "front_end/perf_ui/LineLevelProfile.js",
+  "front_end/perf_ui/GCActionDelegate.js",
+  "front_end/perf_ui/FlameChart.js",
+  "front_end/perf_ui/FilmStripView.js",
+  "front_end/perf_ui/ChartViewport.js",
   "front_end/accessibility/accessibility.js",
   "front_end/accessibility/AccessibilityModel.js",
   "front_end/accessibility/AccessibilityNodeView.js",
@@ -1276,6 +1288,18 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/perf_ui/perf_ui.js",
+  "$resources_out_dir/perf_ui/TimelineOverviewPane.js",
+  "$resources_out_dir/perf_ui/TimelineGrid.js",
+  "$resources_out_dir/perf_ui/PieChart.js",
+  "$resources_out_dir/perf_ui/OverviewGrid.js",
+  "$resources_out_dir/perf_ui/NetworkPriorities.js",
+  "$resources_out_dir/perf_ui/LiveHeapProfile.js",
+  "$resources_out_dir/perf_ui/LineLevelProfile.js",
+  "$resources_out_dir/perf_ui/GCActionDelegate.js",
+  "$resources_out_dir/perf_ui/FlameChart.js",
+  "$resources_out_dir/perf_ui/FilmStripView.js",
+  "$resources_out_dir/perf_ui/ChartViewport.js",
   "$resources_out_dir/accessibility/accessibility.js",
   "$resources_out_dir/accessibility/AccessibilityModel.js",
   "$resources_out_dir/accessibility/AccessibilityNodeView.js",
@@ -1938,6 +1962,7 @@ group("devtools_all_files") {
 devtools_frontend_resources_deps = [
   ":aria_properties",
   ":build_release_devtools",
+  ":copy_devtools_modules",
   ":copy_embedder_scripts",
   ":copy_emulated_devices_images",
   ":copy_htaccess",
@@ -1947,7 +1972,6 @@ devtools_frontend_resources_deps = [
   ":devtools_extension_api",
   ":frontend_protocol_sources",
   ":supported_css_properties",
-  ":copy_devtools_modules",
 ]
 
 if (debug_devtools) {
