--- a/BUILD.gn
+++ b/BUILD.gn
@@ -433,7 +433,6 @@ all_devtools_files = [
   "front_end/timeline/UIDevtoolsController.js",
   "front_end/timeline/UIDevtoolsUtils.js",
   "front_end/toolbox_bootstrap/module.json",
-  "front_end/toolbox_bootstrap/Toolbox.js",
   "front_end/toolbox.js",
   "front_end/toolbox.json",
   "front_end/ui/checkboxTextLabel.css",
@@ -541,6 +540,8 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/toolbox_bootstrap/toolbox_bootstrap.js",
+  "front_end/toolbox_bootstrap/Toolbox.js",
   "front_end/accessibility/accessibility.js",
   "front_end/accessibility/AccessibilityModel.js",
   "front_end/accessibility/AccessibilityNodeView.js",
@@ -1276,6 +1277,8 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/toolbox_bootstrap/toolbox_bootstrap.js",
+  "$resources_out_dir/toolbox_bootstrap/Toolbox.js",
   "$resources_out_dir/accessibility/accessibility.js",
   "$resources_out_dir/accessibility/AccessibilityModel.js",
   "$resources_out_dir/accessibility/AccessibilityNodeView.js",
@@ -1938,6 +1941,7 @@ group("devtools_all_files") {
 devtools_frontend_resources_deps = [
   ":aria_properties",
   ":build_release_devtools",
+  ":copy_devtools_modules",
   ":copy_embedder_scripts",
   ":copy_emulated_devices_images",
   ":copy_htaccess",
@@ -1947,7 +1951,6 @@ devtools_frontend_resources_deps = [
   ":devtools_extension_api",
   ":frontend_protocol_sources",
   ":supported_css_properties",
-  ":copy_devtools_modules",
 ]
 
 if (debug_devtools) {
