--- a/BUILD.gn
+++ b/BUILD.gn
@@ -480,7 +480,6 @@ all_devtools_files = [
   "front_end/web_audio/module.json",
   "front_end/web_audio/webAudio.css",
   "front_end/worker_main/module.json",
-  "front_end/worker_main/WorkerMain.js",
   "front_end/worker_service/module.json",
   "front_end/worker_service/ServiceDispatcher.js",
   "front_end/workspace_diff/module.json",
@@ -541,6 +540,8 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/worker_main/worker_main.js",
+  "front_end/worker_main/WorkerMain.js",
   "front_end/accessibility/accessibility.js",
   "front_end/accessibility/AccessibilityModel.js",
   "front_end/accessibility/AccessibilityNodeView.js",
@@ -1276,6 +1277,8 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/worker_main/worker_main.js",
+  "$resources_out_dir/worker_main/WorkerMain.js",
   "$resources_out_dir/accessibility/accessibility.js",
   "$resources_out_dir/accessibility/AccessibilityModel.js",
   "$resources_out_dir/accessibility/AccessibilityNodeView.js",
@@ -1938,6 +1941,7 @@ group("devtools_all_files") {
 devtools_frontend_resources_deps = [
   ":aria_properties",
   ":build_release_devtools",
+  ":copy_devtools_modules",
   ":copy_embedder_scripts",
   ":copy_emulated_devices_images",
   ":copy_htaccess",
@@ -1947,7 +1951,6 @@ devtools_frontend_resources_deps = [
   ":devtools_extension_api",
   ":frontend_protocol_sources",
   ":supported_css_properties",
-  ":copy_devtools_modules",
 ]
 
 if (debug_devtools) {
