Migrate sources/ to ESM
Bug: 1006759
Change-Id: I509e05a6e4f4c974dbcdd8224f0439d7b1b98aec

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -350,52 +350,19 @@ all_devtools_files = [
   "front_end/sources_test_runner/module.json",
   "front_end/sources_test_runner/SearchTestRunner.js",
   "front_end/sources_test_runner/SourcesTestRunner.js",
-  "front_end/sources/AddSourceMapURLDialog.js",
   "front_end/sources/breakpointEditDialog.css",
-  "front_end/sources/BreakpointEditDialog.js",
   "front_end/sources/callStackSidebarPane.css",
-  "front_end/sources/CallStackSidebarPane.js",
-  "front_end/sources/CoveragePlugin.js",
-  "front_end/sources/CSSPlugin.js",
   "front_end/sources/debuggerPausedMessage.css",
-  "front_end/sources/DebuggerPausedMessage.js",
-  "front_end/sources/DebuggerPlugin.js",
   "front_end/sources/dialog.css",
-  "front_end/sources/EditingLocationHistoryManager.js",
-  "front_end/sources/FilePathScoreFunction.js",
-  "front_end/sources/FilteredUISourceCodeListProvider.js",
-  "front_end/sources/GoToLineQuickOpen.js",
-  "front_end/sources/GutterDiffPlugin.js",
-  "front_end/sources/InplaceFormatterEditorAction.js",
   "front_end/sources/javaScriptBreakpointsSidebarPane.css",
-  "front_end/sources/JavaScriptBreakpointsSidebarPane.js",
-  "front_end/sources/JavaScriptCompilerPlugin.js",
   "front_end/sources/module.json",
   "front_end/sources/navigatorTree.css",
   "front_end/sources/navigatorView.css",
-  "front_end/sources/NavigatorView.js",
-  "front_end/sources/OpenFileQuickOpen.js",
-  "front_end/sources/OutlineQuickOpen.js",
   "front_end/sources/scopeChainSidebarPane.css",
-  "front_end/sources/ScopeChainSidebarPane.js",
-  "front_end/sources/ScriptFormatterEditorAction.js",
-  "front_end/sources/ScriptOriginPlugin.js",
-  "front_end/sources/SearchSourcesView.js",
-  "front_end/sources/SimpleHistoryManager.js",
-  "front_end/sources/SnippetsPlugin.js",
-  "front_end/sources/SourceMapNamesResolver.js",
-  "front_end/sources/SourcesNavigator.js",
   "front_end/sources/sourcesPanel.css",
-  "front_end/sources/SourcesPanel.js",
-  "front_end/sources/SourcesSearchScope.js",
   "front_end/sources/sourcesView.css",
-  "front_end/sources/SourcesView.js",
-  "front_end/sources/TabbedEditorContainer.js",
   "front_end/sources/threadsSidebarPane.css",
-  "front_end/sources/ThreadsSidebarPane.js",
-  "front_end/sources/UISourceCodeFrame.js",
   "front_end/sources/watchExpressionsSidebarPane.css",
-  "front_end/sources/WatchExpressionsSidebarPane.js",
   "front_end/test_runner/module.json",
   "front_end/text_editor/autocompleteTooltip.css",
   "front_end/text_editor/cmdevtools.css",
@@ -541,6 +508,40 @@ lighthouse_locale_files = [
 all_devtools_files += lighthouse_locale_files
 
 all_devtools_modules = [
+  "front_end/sources/sources.js",
+  "front_end/sources/WatchExpressionsSidebarPane.js",
+  "front_end/sources/UISourceCodeFrame.js",
+  "front_end/sources/ThreadsSidebarPane.js",
+  "front_end/sources/TabbedEditorContainer.js",
+  "front_end/sources/SourcesView.js",
+  "front_end/sources/SourcesSearchScope.js",
+  "front_end/sources/SourcesPanel.js",
+  "front_end/sources/SourcesNavigator.js",
+  "front_end/sources/SourceMapNamesResolver.js",
+  "front_end/sources/SnippetsPlugin.js",
+  "front_end/sources/SimpleHistoryManager.js",
+  "front_end/sources/SearchSourcesView.js",
+  "front_end/sources/ScriptOriginPlugin.js",
+  "front_end/sources/ScriptFormatterEditorAction.js",
+  "front_end/sources/ScopeChainSidebarPane.js",
+  "front_end/sources/OutlineQuickOpen.js",
+  "front_end/sources/OpenFileQuickOpen.js",
+  "front_end/sources/NavigatorView.js",
+  "front_end/sources/JavaScriptCompilerPlugin.js",
+  "front_end/sources/JavaScriptBreakpointsSidebarPane.js",
+  "front_end/sources/InplaceFormatterEditorAction.js",
+  "front_end/sources/GutterDiffPlugin.js",
+  "front_end/sources/GoToLineQuickOpen.js",
+  "front_end/sources/FilteredUISourceCodeListProvider.js",
+  "front_end/sources/FilePathScoreFunction.js",
+  "front_end/sources/EditingLocationHistoryManager.js",
+  "front_end/sources/DebuggerPlugin.js",
+  "front_end/sources/DebuggerPausedMessage.js",
+  "front_end/sources/CoveragePlugin.js",
+  "front_end/sources/CallStackSidebarPane.js",
+  "front_end/sources/CSSPlugin.js",
+  "front_end/sources/BreakpointEditDialog.js",
+  "front_end/sources/AddSourceMapURLDialog.js",
   "front_end/accessibility/accessibility.js",
   "front_end/accessibility/AccessibilityModel.js",
   "front_end/accessibility/AccessibilityNodeView.js",
@@ -1276,6 +1277,40 @@ application_templates = [
 ]
 
 copied_devtools_modules = [
+  "$resources_out_dir/sources/sources.js",
+  "$resources_out_dir/sources/WatchExpressionsSidebarPane.js",
+  "$resources_out_dir/sources/UISourceCodeFrame.js",
+  "$resources_out_dir/sources/ThreadsSidebarPane.js",
+  "$resources_out_dir/sources/TabbedEditorContainer.js",
+  "$resources_out_dir/sources/SourcesView.js",
+  "$resources_out_dir/sources/SourcesSearchScope.js",
+  "$resources_out_dir/sources/SourcesPanel.js",
+  "$resources_out_dir/sources/SourcesNavigator.js",
+  "$resources_out_dir/sources/SourceMapNamesResolver.js",
+  "$resources_out_dir/sources/SnippetsPlugin.js",
+  "$resources_out_dir/sources/SimpleHistoryManager.js",
+  "$resources_out_dir/sources/SearchSourcesView.js",
+  "$resources_out_dir/sources/ScriptOriginPlugin.js",
+  "$resources_out_dir/sources/ScriptFormatterEditorAction.js",
+  "$resources_out_dir/sources/ScopeChainSidebarPane.js",
+  "$resources_out_dir/sources/OutlineQuickOpen.js",
+  "$resources_out_dir/sources/OpenFileQuickOpen.js",
+  "$resources_out_dir/sources/NavigatorView.js",
+  "$resources_out_dir/sources/JavaScriptCompilerPlugin.js",
+  "$resources_out_dir/sources/JavaScriptBreakpointsSidebarPane.js",
+  "$resources_out_dir/sources/InplaceFormatterEditorAction.js",
+  "$resources_out_dir/sources/GutterDiffPlugin.js",
+  "$resources_out_dir/sources/GoToLineQuickOpen.js",
+  "$resources_out_dir/sources/FilteredUISourceCodeListProvider.js",
+  "$resources_out_dir/sources/FilePathScoreFunction.js",
+  "$resources_out_dir/sources/EditingLocationHistoryManager.js",
+  "$resources_out_dir/sources/DebuggerPlugin.js",
+  "$resources_out_dir/sources/DebuggerPausedMessage.js",
+  "$resources_out_dir/sources/CoveragePlugin.js",
+  "$resources_out_dir/sources/CallStackSidebarPane.js",
+  "$resources_out_dir/sources/CSSPlugin.js",
+  "$resources_out_dir/sources/BreakpointEditDialog.js",
+  "$resources_out_dir/sources/AddSourceMapURLDialog.js",
   "$resources_out_dir/accessibility/accessibility.js",
   "$resources_out_dir/accessibility/AccessibilityModel.js",
   "$resources_out_dir/accessibility/AccessibilityNodeView.js",
@@ -1938,6 +1973,7 @@ group("devtools_all_files") {
 devtools_frontend_resources_deps = [
   ":aria_properties",
   ":build_release_devtools",
+  ":copy_devtools_modules",
   ":copy_embedder_scripts",
   ":copy_emulated_devices_images",
   ":copy_htaccess",
@@ -1947,7 +1983,6 @@ devtools_frontend_resources_deps = [
   ":devtools_extension_api",
   ":frontend_protocol_sources",
   ":supported_css_properties",
-  ":copy_devtools_modules",
 ]
 
 if (debug_devtools) {
