--- a/BUILD.gn
+++ b/BUILD.gn
@@ -433,7 +433,6 @@ all_devtools_files = [
   "front_end/timeline/UIDevtoolsController.js",
   "front_end/timeline/UIDevtoolsUtils.js",
   "front_end/toolbox_bootstrap/module.json",
-  "front_end/toolbox_bootstrap/Toolbox.js",
   "front_end/toolbox.js",
   "front_end/toolbox.json",
   "front_end/ui/checkboxTextLabel.css",
@@ -996,6 +995,7 @@ all_devtools_modules = [
   "front_end/timeline_model/TimelineModelFilter.js",
   "front_end/timeline_model/TimelineProfileTree.js",
   "front_end/timeline_model/TracingLayerTree.js",
+  "front_end/toolbox_bootstrap/toolbox_bootstrap.js",
   "front_end/ui/Action.js",
   "front_end/ui/ActionDelegate.js",
   "front_end/ui/ActionRegistry.js",
@@ -1715,6 +1715,7 @@ copied_devtools_modules = [
   "$resources_out_dir/timeline_model/TimelineModelFilter.js",
   "$resources_out_dir/timeline_model/TimelineProfileTree.js",
   "$resources_out_dir/timeline_model/TracingLayerTree.js",
+  "$resources_out_dir/toolbox_bootstrap/toolbox_bootstrap.js",
   "$resources_out_dir/ui/Action.js",
   "$resources_out_dir/ui/ActionDelegate.js",
   "$resources_out_dir/ui/ActionRegistry.js",
@@ -1938,6 +1939,7 @@ group("devtools_all_files") {
 devtools_frontend_resources_deps = [
   ":aria_properties",
   ":build_release_devtools",
+  ":copy_devtools_modules",
   ":copy_embedder_scripts",
   ":copy_emulated_devices_images",
   ":copy_htaccess",
@@ -1947,7 +1949,6 @@ devtools_frontend_resources_deps = [
   ":devtools_extension_api",
   ":frontend_protocol_sources",
   ":supported_css_properties",
-  ":copy_devtools_modules",
 ]
 
 if (debug_devtools) {
